<?xml version="1.0"?>
<package format="2">
  <name>fsd_ekf_slam</name>
  <version>1.0.0</version>
  <description>EKF SLAM for Formula Student Driverless car</description>

  <maintainer email="mjistepien@gmail.com">Maciej Stępień</maintainer>
  <author email="mjistepien@gmail.com">Maciej Stępień</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>pcl_ros</exec_depend>
</package>